--- a/styles/deal.less
+++ b/styles/deal.less
@@ -26,6 +26,9 @@
     grid-template-columns: 1fr;
     column-gap: 0;
     row-gap: 2rem;
+
+    .deal-video,
+    .deal-carousel { grid-column: 1; grid-row: auto; }
   }
 }
 
